[build-system]
requires = ["setuptools>=61.0", "tensorflow", "tensorflow-probability",
            "tensorflow-addons", "pandas", "numpy", "tqdm"]
build-backend = "setuptools.build_meta"

[project]
name = "Teras"
version = "0.1.0"
authors = [
  { name="Khawaja Abaid", email="khawaja.abaid@gmail.com" },
]
description = "A Unified Deep Learning Library for Tabular Data"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KhawajaAbaid/teras"
"Bug Tracker" = "https://github.com/KhawajaAbaid/teras/issues"