[build-system]
requires = ["setuptools>=61.0", "keras>=3.1.1", "pandas", "numpy",
    "scikit-learn"]
build-backend = "setuptools.build_meta"

[project]
name = "Teras"
version = "0.3.1"
authors = [
  { name="Khawaja Abaid", email="khawaja.abaid@gmail.com" },
]
description = "A Unified Deep Learning Library for Tabular Data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/KhawajaAbaid/teras"
"Bug Tracker" = "https://github.com/KhawajaAbaid/teras/issues"
"Docs" = "https://teras.readthedocs.io/"